# invoice-engine

./: .gitignore  README.md  pyproject.toml
.idx/: dev.nix
memory-bank/: activeContext.md  dataInsights.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
v1/: .clasp.json  Config.js  Diagnostics.js  InvoiceConversion.js  InvoiceExport.js  InvoiceExtraction.js  README.md  WebExtraction.js  appsscript.json
v2/: main.py
v2/common/: auth.py  constants.py
v2/conversion/: doc_parser.py  engine.py
v2/discovery/: drive_client.py  engine.py
v2/exploration/: doc_inspector.py
v2/scoping/: engine.py
